# A_maze_ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  fgfgfg.txt  maze.txt  mazegen-1.0.0-py3-none-any.whl  new_config.txt  output  output_maze.txt  pyproject.toml
maze/: __init__.py  pattern_42.py
maze/exporter/: __init__.py  hex_exporter.py
maze/generator/: __init__.py  imperfect.py  maze_generator.py  recursive_backtracker.py
maze/models/: __init__.py  cells.py  grid_cell.py  maze.py
maze/parser/: __init__.py  config_parser.py  test_config.py  test_parser.py
maze/renderer/: __init__.py  ascii_render.py  ascii_render_v2.py  ascii_render_v3.py  ascii_renderer.py  display_ui.py  pattern_42.py  test_render.py
maze/solver/: __init__.py  solver.py  solver.txt
maze/utils/: __init__.py  constants.py
mazegen/: __init__.py
mazegen/exporter/: hex_exporter.py
mazegen/generator/: __init__.py  imperfect.py  maze_generator.py  recursive_backtracker.py
mazegen/models/: cells.py  maze.py
mazegen/solver/: __init__.py  solver.py
mazegen/utils/: constants.py  pattern_42.py
