[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator library for A-Maze-ing (42 Madrid)"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
    "build"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mazegen"]

[tool.hatch.build.targets.sdist]
exclude = [
  "**/.*venv",
  "**/venv",
  "**/env",
  "**/.env",
]
